--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=jpaTest
 
+spring.devtools.remote.restart.enabled=true
+
 #thymeleaf SET
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
